--- a/public/assets-lpe/scss/lpe.scss
+++ b/public/assets-lpe/scss/lpe.scss
@@ -286,13 +286,6 @@ textarea.form-control.input-lg {
 
 #crearDerecho{
 .titulo-derecho-background{
-background-color: #6f5499;
-background-image: -webkit-gradient(linear,left top,left bottom,from(#563d7c),to(#6f5499));
-background-image: -webkit-linear-gradient(top,#563d7c 0,#6f5499 100%);
-background-image: -o-linear-gradient(top,#563d7c 0,#6f5499 100%);
-background-image: linear-gradient(to bottom,#563d7c 0,#6f5499 100%);
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#563d7c', endColorstr='#6F5499', GradientType=0);
-background-repeat: repeat-x;
 margin-bottom:40px;
 .overlay{
     // background: rgba(0,0,0,0.3); 
@@ -343,13 +336,6 @@ article{
 color: #cdbfe3;
 text-align: center;
 text-shadow: 0 1px 0 rgba(0,0,0,.1);
-background-color: #6f5499;
-background-image: -webkit-gradient(linear,left top,left bottom,from(#563d7c),to(#6f5499));
-background-image: -webkit-linear-gradient(top,#563d7c 0,#6f5499 100%);
-background-image: -o-linear-gradient(top,#563d7c 0,#6f5499 100%);
-background-image: linear-gradient(to bottom,#563d7c 0,#6f5499 100%);
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#563d7c', endColorstr='#6F5499', GradientType=0);
-background-repeat: repeat-x;
 margin-bottom:40px;
 background-size: cover;
 h1{color:#FFF;}
@@ -431,7 +417,7 @@ textarea.comentario{
     }
 
     .overlay{
-        background: rgba(0,0,0,0.4);
+        background: rgba(0,0,0,0.2);
         padding: 15px;
     }
     h5{
@@ -502,7 +488,7 @@ textarea.comentario{
         
     }
     .embed-responsive{
-        margin: 20px 0 40px;
+        // margin: 20px 0 40px;
     }
 }
 
@@ -510,4 +496,47 @@ textarea.comentario{
 
 .twitter-typeahead{
     width: 100%;
+}
+
+// ==================================
+
+$c1 : #6f5499;
+$c2 : #00a73d;
+$c3 : #00cbdc;
+$c4 : #ff5400;
+.bgcolor0{
+    background-color: $c1;
+background-image: -webkit-gradient(linear,left top,left bottom,from(darken($c1,20%),to($c1)));
+background-image: -webkit-linear-gradient(top,darken($c1,20%) 0,$c1 100%);
+background-image: -o-linear-gradient(top,darken($c1,20%) 0,$c1 100%);
+background-image: linear-gradient(to bottom,darken($c1,20%) 0,$c1 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='darken($c1,20%)', endColorstr='$c1', GradientType=0);
+background-repeat: repeat-x;
+}
+.bgcolor1{
+    background-color: $c2;
+background-image: -webkit-gradient(linear,left top,left bottom,from(darken($c2,20%),to($c2)));
+background-image: -webkit-linear-gradient(top,darken($c2,20%) 0,$c2 100%);
+background-image: -o-linear-gradient(top,darken($c2,20%) 0,$c2 100%);
+background-image: linear-gradient(to bottom,darken($c2,20%) 0,$c2 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='darken($c2,20%)', endColorstr='$c2', GradientType=0);
+background-repeat: repeat-x;
+}
+.bgcolor2{
+    background-color: $c3;
+background-image: -webkit-gradient(linear,left top,left bottom,from(darken($c3,20%),to($c3)));
+background-image: -webkit-linear-gradient(top,darken($c3,20%) 0,$c3 100%);
+background-image: -o-linear-gradient(top,darken($c3,20%) 0,$c3 100%);
+background-image: linear-gradient(to bottom,darken($c3,20%) 0,$c3 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='darken($c3,20%)', endColorstr='$c3', GradientType=0);
+background-repeat: repeat-x;
+}
+.bgcolor3{
+    background-color: $c4;
+background-image: -webkit-gradient(linear,left top,left bottom,from(darken($c4,20%),to($c4)));
+background-image: -webkit-linear-gradient(top,darken($c4,20%) 0,$c4 100%);
+background-image: -o-linear-gradient(top,darken($c4,20%) 0,$c4 100%);
+background-image: linear-gradient(to bottom,darken($c4,20%) 0,$c4 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='darken($c4,20%)', endColorstr='$c4', GradientType=0);
+background-repeat: repeat-x;
 }
