--- a/views/lpe/contenido/opinion/ver.twig
+++ b/views/lpe/contenido/opinion/ver.twig
@@ -5,7 +5,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             </div>
             <div class="modal-body text-justify">
-                <div class="header-opinion" style="background-image: url('https://unsplash.it/500/300/?random');">
+                <div class="header-opinion bgcolor{{colorSeleccionado}}">
                     <div class="overlay text-center">
                         <!--<img src="https://unsplash.it/300/200/?random" class="img-rounded" style="width:180px" alt="">-->
                         <h3><small>La opinión de..</small><br><b>{{opinion.participante.nombre}}</b></h3>
