--- a/views/lpe/registro/registro.twig
+++ b/views/lpe/registro/registro.twig
@@ -117,8 +117,7 @@
 
 
     $('form').submit(function(e) {
-        var fecha = $("#guardarFecha").val()
-        fecha += ' ' + $('#timepicker').val() + '00:00';
+        var fecha = $("#guardarFecha").val();
         $('#fecha-final').val(fecha);
     })
 
